Buttons are no longer too short on Firefox

--- a/editor/style.css
+++ b/editor/style.css
@@ -73,7 +73,7 @@ input:disabled
 
 .header-button
 {
-	width: 75px;
+	width: 100px;
 }
 
 #filelist
